# rust-codebits

./: Cargo.toml
examples/: needle_in_haystack.rs  palindrome.rs
examples/bank_system/: main.rs
