[package]
name = "rust-codebits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"

[dependencies.uuid]
version = "1.3.0"
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics"
]
